--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/bcryptjs": "^2.4.5",
     "@types/node": "^20.8.10",
     "eslint": "^8.53.0",
     "tsup": "^7.2.0",
@@ -21,6 +22,8 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.1.0",
+    "@fastify/jwt": "^7.2.2",
+    "bcryptjs": "^2.4.3",
     "fastify": "^4.24.3",
     "zod": "^3.22.4"
   }
