--- a/package.json
+++ b/package.json
@@ -29,11 +29,19 @@
   "dependencies": {
     "@fastify/cookie": "^9.1.0",
     "@fastify/jwt": "^7.2.2",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
+    "fastify-type-provider-zod": "^2.0.0",
     "knex": "^3.0.1",
     "sqlite3": "^5.1.6",
     "zod": "^3.22.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@rocketseat/eslint-config/node"
+    ]
   }
 }
